--- a/views/pages/admin/addAccount.ejs
+++ b/views/pages/admin/addAccount.ejs
@@ -1,6 +1,6 @@
 <div class="blur-add" onclick="closeMenu()"></div>
 
-<form class="add-admin-menu" name="createAccount" method="POST">
+<form class="add-admin-menu" name="createAccount" method="POST" action="/admin/addAdmin">
     <div class="close-row">
         <span onclick="closeMenu()">
             <svg>
@@ -40,5 +40,5 @@
             <option value="3" selected>Менеджер</option>
         </select>
     </div>
-    <button class="btn" type="submit" disabled>Сохранить</button>
+    <button class="btn" type="submit">Сохранить</button>
 </form>
