--- a/public/main.css
+++ b/public/main.css
@@ -1490,6 +1490,7 @@ header {
   margin-left: 12px;
 }
 .wrap .flex-item .screen-menu .filter-menu {
+  position: relative;
   width: 100%;
   height: 76px;
   margin-top: 24px;
@@ -1500,10 +1501,36 @@ header {
   color: grey;
   font-size: 18px;
 }
+.wrap .flex-item .screen-menu .filter-menu span.svg {
+  position: absolute;
+  display: none;
+  right: 0px;
+  bottom: 0px;
+  cursor: pointer;
+  line-height: normal;
+}
+.wrap .flex-item .screen-menu .filter-menu span.svg svg {
+  width: 38px;
+  height: 38px;
+  margin: 12px;
+  fill: grey;
+  transition: fill 0.2s;
+}
+.wrap .flex-item .screen-menu .filter-menu span.svg:hover svg {
+  fill: #FF6600;
+}
 .wrap .flex-item .screen-menu .filter-menu .sort-btn {
   width: 100%;
   height: 38px;
   display: flex;
+}
+.wrap .flex-item .screen-menu .filter-menu .sort-btn span {
+  margin-right: 12px;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.wrap .flex-item .screen-menu .filter-menu .sort-btn span:hover {
+  color: #FF6600;
 }
 .wrap .flex-item .screen-menu .items-grid {
   display: grid;
@@ -1832,6 +1859,268 @@ footer .line-footer div a .vk-icon-footer:hover {
   }
   .main .home-page .body {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .wrap .flex-item .options-menu {
+    position: absolute;
+    top: 0;
+    width: calc(100% - 24px);
+    min-height: 100vh;
+    max-height: 100vh;
+    margin: 0;
+    padding: 24px 12px 24px 12px;
+    background: white;
+    z-index: 11;
+    overflow-y: scroll;
+  }
+  .wrap .flex-item .options-menu div {
+    width: 100%;
+  }
+  .wrap .flex-item .options-menu div h2 {
+    font-weight: inherit;
+    margin: 12px 0 12px 0;
+  }
+  .wrap .flex-item .options-menu div select {
+    width: 100%;
+    height: 50px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    outline: 0;
+    margin: 12px 0 12px 0;
+  }
+  .wrap .flex-item .options-menu div .inp-flex {
+    width: 100%;
+    height: 50px;
+    display: flex;
+  }
+  .wrap .flex-item .options-menu div .inp-flex input {
+    width: 50%;
+    height: 50px;
+    outline: 0;
+    border: 1px solid lightgrey;
+    padding-left: 12px;
+  }
+  .wrap .flex-item .options-menu div .inp-flex input.first {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+  .wrap .flex-item .options-menu div .inp-flex input.second {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  .wrap .flex-item .options-menu div div {
+    width: 100%;
+    height: 40px;
+  }
+  .wrap .flex-item .options-menu div div.select-check {
+    position: relative;
+  }
+  .wrap .flex-item .options-menu div div.select-check .checkbox-div {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    width: 26px;
+    height: 26px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .wrap .flex-item .options-menu div div.select-check .checkbox-div svg {
+    width: 26px;
+    height: 26px;
+    fill: white;
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+  .wrap .flex-item .options-menu div div.select-check .checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+  .wrap .flex-item .options-menu div div.select-check .checkbox:checked ~ .checkbox-div {
+    background: #FF6600;
+    border-color: #FF6600;
+  }
+  .wrap .flex-item .options-menu div div.select-check .checkbox:checked ~ .checkbox-div svg {
+    opacity: 1;
+  }
+  .wrap .flex-item .options-menu div div.select-check label {
+    font-size: 22px;
+    color: grey;
+    margin-left: 50px;
+    line-height: 40px;
+    cursor: pointer;
+  }
+  .wrap .flex-item .screen-menu {
+    width: calc(100% - 312px);
+    margin-left: 12px;
+  }
+  .wrap .flex-item .screen-menu .filter-menu {
+    position: relative;
+    width: 100%;
+    height: 76px;
+    margin-top: 24px;
+    border-bottom: 1px solid lightgrey;
+  }
+  .wrap .flex-item .screen-menu .filter-menu span {
+    line-height: 38px;
+    color: grey;
+    font-size: 18px;
+  }
+  .wrap .flex-item .screen-menu .filter-menu span.svg {
+    position: absolute;
+    display: none;
+    right: 0px;
+    bottom: 0px;
+    cursor: pointer;
+    line-height: normal;
+  }
+  .wrap .flex-item .screen-menu .filter-menu span.svg svg {
+    width: 38px;
+    height: 38px;
+    margin: 12px;
+    fill: grey;
+    transition: fill 0.2s;
+  }
+  .wrap .flex-item .screen-menu .filter-menu span.svg:hover svg {
+    fill: #FF6600;
+  }
+  .wrap .flex-item .screen-menu .filter-menu .sort-btn {
+    width: 100%;
+    height: 38px;
+    display: flex;
+  }
+  .wrap .flex-item .screen-menu .filter-menu .sort-btn span {
+    margin-right: 12px;
+    cursor: pointer;
+    transition: color 0.2s;
+  }
+  .wrap .flex-item .screen-menu .filter-menu .sort-btn span:hover {
+    color: #FF6600;
+  }
+  .wrap .flex-item .screen-menu .items-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(324px, 1fr));
+    justify-items: center;
+    width: 100%;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item {
+    position: relative;
+    min-width: 300px;
+    max-width: 1fr;
+    height: 600px;
+    padding: 12px;
+    margin: 12px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    transition: box-shadow 0.4s;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item:hover {
+    box-shadow: 0 0 20px rgba(153, 153, 153, 0.8);
+  }
+  .wrap .flex-item .screen-menu .items-grid .item:hover .favorite {
+    background: rgba(153, 153, 153, 0.8);
+  }
+  .wrap .flex-item .screen-menu .items-grid .item:hover .favorite:hover {
+    background: rgba(153, 153, 153, 0.6);
+  }
+  .wrap .flex-item .screen-menu .items-grid .item:hover .favorite:hover svg {
+    fill: #FF6600;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll {
+    position: relative;
+    display: flex;
+    width: 1fr;
+    margin: auto;
+    cursor: pointer;
+    overflow: hidden;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .hover-span-img {
+    height: 280px;
+    flex-grow: 1;
+    -webkit-flex-grow: 1;
+    margin-left: 5px;
+    border-bottom: 1px solid grey;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .hover-span-img img {
+    display: none;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 5px;
+    left: 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    width: 100%;
+    height: 278px;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .hover-span-img.active {
+    border-color: #FF6600;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .hover-span-img.active img {
+    display: block;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .favorite {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    transition: 0.2s;
+    cursor: pointer;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .img-scroll .favorite svg {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    transition: fill 0.2s;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item h2 {
+    text-align: left;
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 245px;
+    text-align: left;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info a {
+    font-size: 18px;
+    transition: color 0.2s;
+    max-height: 152px;
+    overflow: hidden;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info a:hover {
+    color: #FF6600;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info span {
+    margin-top: 10px;
+    font-size: 18px;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info span.stock {
+    color: green;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info span.close {
+    color: red;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info .in-cart {
+    width: 100%;
+    height: 50px;
+    color: #FF6600;
+    text-align: center;
+    line-height: 50px;
+    margin-bottom: 0;
+    margin-top: auto;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: color 0.4s;
+  }
+  .wrap .flex-item .screen-menu .items-grid .item .info .in-cart:hover {
+    color: grey;
   }
 }
 @media screen and (max-width: 970px) {
