--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -1136,8 +1136,7 @@ a {
                 position: absolute;
                 right: 10px;
                 top: 10px;
-                opacity: 1;
-                pointer-events: all;
+                display: block;
                 cursor: pointer;
                 width: 30px;
                 height: 30px;
@@ -1149,18 +1148,15 @@ a {
                 }
 
                 &.active{
-                    opacity: 0;
-                    pointer-events: none;
+                    display: none;
                 }
             }
 
             .show{
-                opacity: 0;
-                pointer-events: none;
+                display: none;
 
                 &.active{
-                    opacity: 1;
-                    pointer-events: all;
+                    display: block;
                 }
             }
         }
